# opendfe

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  valgrind.supp
.github/workflows/: makefile.yml
docs/: milestones.md
docs/odf/res/: bm.md  gob.md  index.md  pal.md
headers/: bm.h  gob.h  mob.h  pal.h  types.h
include/: bm.h  file.h  glmipmap.h  gltexture.h  gob.h  img.h  inmemoryfile.h  pal.h  types.h
include/core/: control.h  gamestate.h
include/dgl/: main.h  model.h  texture.h
include/dgl/opengl/: init.h  window.h
include/display/: model.h
include/drivers/: bm.h  fme.h  gob.h  lfd.h  pal.h  rle.h
include/drivers/lfd/: film.h
include/gl/: init.h
include/math/: vec.h
include/odf/ctrl/: ingameevent.h
include/odf/math/: fvec.h  glm.h  mat.h  vec.h
include/odf/ogl/: dyntex.h  init.h  main.h  model.h  texture.h  window.h
include/odf/res/: 3do.h  bm.h  film.h  fme.h  fnt.h  gob.h  lfd.h  msg.h  pal.h  rle.h  wax.h
include/odf/sys/: file.h  gc.h  img.h  inmemoryfile.h  list.h  log.h  macros.h  memory.h  optional.h  stringbuffer.h  strings.h  types.h
include/system/: list.h  memory.h  optional.h  stringbuffer.h  strings.h
src/: bm.c  dark.c  file.c  glmipmap.c  gltexture.c  glwindow.c  gob.c  img.c  inmemoryfile.c  mob.c  pal.c  types.c
src/dgl/opengl/: init.c  main.c  model.c
src/display/: main.c  model.c  texture.c
src/drivers/: bm.c  fme.c  gob.c  lfd.c  pal.c  rle.c
src/drivers/lfd/: film.c
src/gl/: init.c
src/odf/: dark.c
src/odf/ctrl/: ingameevent.c  module.mk
src/odf/math/: glm.cpp  module.mk
src/odf/ogl/: dyntex.c  init.c  main.c  model.c  module.mk  texture.c  window.c
src/odf/res/: 3do.c  bm.c  film.c  fme.c  (+8 more)
src/shaders/: gui.frag  gui.vs
src/system/: list.c  memory.c  optional.c  stringbuffer.c  strings.c
tests/: test_bm.c  test_drivers_fme.c  test_file.c  test_gob.c  test_inmemoryfile.c  test_rle.c  test_system_memory.c  test_system_stringbuffer.c  test_types.c
tests/headers/: test_fixtures.h
tests/include/: test_fixtures.h
tests/lib/: assert_string.c  asserts.c  test_fixtures.c
tests/mocks/: img.c
tests/resources/: test.bm  test.gob  test.pal
tools/: animdisplay.c  bmdisplay.c  bmextract.c  fmedisplay.c  gamepad.c  waxdisplay.c
(+61 files in other folders)
